bindings/c/include/cgenalyzer.h


typedef enum GnFACompTag {
	GnFACompTagDC, 
	GnFACompTagSignal, 
	GnFACompTagHD, 
	GnFACompTagIMD, 
	GnFACompTagILOS, 
	GnFACompTagILGT, 
	GnFACompTagCLK, 
	GnFACompTagUserDist, 
	GnFACompTagNoise 
} GnFACompTag;
typedef enum GnFASsb {
	GnFASsbDefault, 
	GnFASsbDC, 
	GnFASsbSignal, 
	GnFASsbWO, 
} GnFASsb;
typedef enum GnFreqAxisType {
	GnFreqAxisTypeDcCenter, 
	GnFreqAxisTypeDcLeft, 
	GnFreqAxisTypeReal 
} GnFreqAxisType;
typedef enum GnInlLineFit {
	GnInlLineFitBestFit, 
	GnInlLineFitEndFit, 
	GnInlLineFitNoFit 
} GnInlLineFit;
__api int gn_histx32(
		uint64_t *hist, 
		size_t hist_size, 
		const int32_t *in, 
		size_t in_size, 
		int64_t min, 
		int64_t max, 
		bool preserve 
);
__api int gn_histx64(
		uint64_t *hist, 
		size_t hist_size, 
		const int64_t *in, 
		size_t in_size, 
		int64_t min, 
		int64_t max, 
		bool preserve 
);
__api int
gn_hist_analysis(char **rkeys, 
		size_t rkeys_size, 
		double *rvalues, 
		size_t rvalues_size, 
		const uint64_t *hist, 
		size_t hist_size 
);
__api int gn_inl(double *inl, 
		size_t inl_size, 
		const double *dnl, 
		size_t dnl_size, 
		GnInlLineFit fit 
);
__api int
gn_inl_analysis(char **rkeys, 
		size_t rkeys_size, 
		double *rvalues, 
		size_t rvalues_size, 
		const double *inl, 
		size_t inl_size 
);
__api int gn_fft_analysis(
		char **rkeys, 
		size_t rkeys_size, 
		double *rvalues, 
		size_t rvalues_size, 
		const char *
				cfg_id, 
		const double *in, 
		size_t in_size, 
		size_t nfft, 
		GnFreqAxisType axis_type 
);
__api int gn_fft_analysis_select(
		double *rvalues, 
		size_t rvalues_size, 
		const char *
				cfg_id, 
		const char **rkeys, 
		size_t rkeys_size, 
		const double *in, 
		size_t in_size, 
		size_t nfft, 
		GnFreqAxisType axis_type 
);
__api int gn_fft_analysis_single(
		double *rvalue, 
		const char *
				cfg_id, 
		const char *rkey, 
		const double *in, 
		size_t in_size, 
		size_t nfft, 
		GnFreqAxisType axis_type 
);
__api int gn_fa_analysis_band(const char *obj_key, 
		double center, 
		double width 
);
__api int gn_fa_analysis_band_e(
		const char *obj_key, 
		const char *center, 
		const char *width 
);
__api int gn_fa_clk(
		const char *obj_key, 
		const int *clk, 
		size_t clk_size, 
		bool as_noise 
);
__api int
gn_fa_conv_offset(const char *obj_key, 
		bool enable 
);
__api int gn_fa_create(const char *obj_key 
);
__api int gn_fa_dc(const char *obj_key, 
		bool as_dist 
);
__api int gn_fa_fdata(const char *obj_key, 
		double f 
);
__api int gn_fa_fdata_e(const char *obj_key, 
		const char *f 
);
__api int gn_fa_fixed_tone(const char *obj_key, 
		const char *comp_key, 
		GnFACompTag tag, 
		double freq, 
		int ssb 
);
__api int gn_fa_fixed_tone_e(const char *obj_key, 
		const char *comp_key, 
		GnFACompTag tag, 
		const char *freq, 
		int ssb 
);
__api int gn_fa_fsample(const char *obj_key, 
		double f 
);
__api int gn_fa_fsample_e(const char *obj_key, 
		const char *f 
);
__api int gn_fa_fshift(const char *obj_key, 
		double f 
);
__api int gn_fa_fshift_e(const char *obj_key, 
		const char *f 
);
__api int
gn_fa_fund_images(const char *obj_key, 
		bool enable 
);
__api int gn_fa_hd(
		const char *obj_key, 
		int n 
);
__api int gn_fa_ilv(
		const char *obj_key, 
		const int *ilv, 
		size_t ilv_size, 
		bool as_noise 
);
__api int gn_fa_imd(const char *obj_key, 
		int n 
);
__api int gn_fa_load(char *buf, 
		size_t size, 
		const char *filename, 
		const char *obj_key 
);
__api int gn_fa_max_tone(const char *obj_key, 
		const char *comp_key, 
		GnFACompTag tag, 
		int ssb 
);
__api int gn_fa_preview(
		char *buf, 
		size_t size, 
		const char *
				cfg_id, 
		bool cplx 
);
__api int
gn_fa_quad_errors(const char *obj_key, 
		bool enable 
);
__api int gn_fa_remove_comp(const char *obj_key, 
		const char *comp_key 
);
__api int gn_fa_reset(const char *obj_key 
);
__api int gn_fa_ssb(const char *obj_key, 
		GnFASsb group, 
		int ssb 
);
__api int gn_fa_var(const char *obj_key, 
		const char *name, 
		double value 
);
__api int gn_fa_wo(const char *obj_key, 
		int n 
);
__api int
gn_fa_result(double *result, 
		const char **rkeys, 
		size_t rkeys_size, 
		const double *rvalues, 
		size_t rvalues_size, 
		const char *rkey 
);
__api int
gn_fa_result_string(char *result, 
		size_t result_size, 
		const char **rkeys, 
		size_t rkeys_size, 
		const double *rvalues, 
		size_t rvalues_size, 
		const char *rkey 
);
__api int
gn_fa_load_key_size(size_t *size, 
		const char *filename, 
		const char *obj_key 
);
__api int gn_fa_preview_size(
		size_t *size, 
		const char *
				cfg_id, 
		bool cplx 
);
__api int gn_fa_result_string_size(
		size_t *size, 
		const char **rkeys, 
		size_t rkeys_size, 
		const double *rvalues, 
		size_t rvalues_size, 
		const char *rkey 
);
__api int gn_fft_analysis_results_key_sizes(
		size_t *key_sizes, 
		size_t key_sizes_size, 
		const char *
				cfg_id, 
		size_t in_size, 
		size_t nfft 
);
__api int gn_fft_analysis_results_size(
		size_t *size, 
		const char *
				cfg_id, 
		size_t in_size, 
		size_t nfft 
);