bindings/csharp/Genalyzer/NativeMethods.cs


        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_histx32(
            [Out] ulong[]  hist, UIntPtr histSize,
            [In]  int[]    input, UIntPtr inSize,
            long min, long max,
            [MarshalAs(UnmanagedType.I1)] bool preserve);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_histx64(
            [Out] ulong[]  hist, UIntPtr histSize,
            [In]  long[]   input, UIntPtr inSize,
            long min, long max,
            [MarshalAs(UnmanagedType.I1)] bool preserve);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_hist_analysis(
            [In, Out] IntPtr[] rkeys, UIntPtr rkeysSize,
            [Out]     double[] rvalues, UIntPtr rvaluesSize,
            [In]      ulong[]  hist, UIntPtr histSize);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_inl(
            [Out] double[] inl,  UIntPtr inlSize,
            [In]  double[] dnl,  UIntPtr dnlSize,
            int fit);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_inl_analysis(
            [In, Out] IntPtr[] rkeys, UIntPtr rkeysSize,
            [Out]     double[] rvalues, UIntPtr rvaluesSize,
            [In]      double[] inl,  UIntPtr inlSize);

        // ===============================================================
        // Fourier Analysis
        // ===============================================================

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fft_analysis(
            [In, Out] IntPtr[] rkeys,   UIntPtr rkeysSize,
            [Out]     double[] rvalues, UIntPtr rvaluesSize,
            [MarshalAs(UnmanagedType.LPStr)] string cfgId,
            [In]      double[] input,   UIntPtr inSize,
            UIntPtr nfft,
            int axisType);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fft_analysis_select(
            [Out] double[] rvalues, UIntPtr rvaluesSize,
            [MarshalAs(UnmanagedType.LPStr)] string cfgId,
            [In]  IntPtr[] rkeys,   UIntPtr rkeysSize,
            [In]  double[] input,   UIntPtr inSize,
            UIntPtr nfft,
            int axisType);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fft_analysis_single(
            out double rvalue,
            [MarshalAs(UnmanagedType.LPStr)] string cfgId,
            [MarshalAs(UnmanagedType.LPStr)] string rkey,
            [In] double[] input, UIntPtr inSize,
            UIntPtr nfft,
            int axisType);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fft_analysis_results_key_sizes(
            [Out] UIntPtr[] keySizes, UIntPtr keySizesSize,
            [MarshalAs(UnmanagedType.LPStr)] string cfgId,
            UIntPtr inSize,
            UIntPtr nfft);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fft_analysis_results_size(
            out UIntPtr size,
            [MarshalAs(UnmanagedType.LPStr)] string cfgId,
            UIntPtr inSize,
            UIntPtr nfft);

        // Fourier Analysis Configuration
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fa_analysis_band(
            [MarshalAs(UnmanagedType.LPStr)] string objKey,
            double center, double width);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fa_analysis_band_e(
            [MarshalAs(UnmanagedType.LPStr)] string objKey,
            [MarshalAs(UnmanagedType.LPStr)] string center,
            [MarshalAs(UnmanagedType.LPStr)] string width);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fa_clk(
            [MarshalAs(UnmanagedType.LPStr)] string objKey,
            [In] int[] clk, UIntPtr clkSize,
            [MarshalAs(UnmanagedType.I1)] bool asNoise);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fa_conv_offset(
            [MarshalAs(UnmanagedType.LPStr)] string objKey,
            [MarshalAs(UnmanagedType.I1)] bool enable);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fa_create(
            [MarshalAs(UnmanagedType.LPStr)] string objKey);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fa_dc(
            [MarshalAs(UnmanagedType.LPStr)] string objKey,
            [MarshalAs(UnmanagedType.I1)] bool asDist);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fa_fdata(
            [MarshalAs(UnmanagedType.LPStr)] string objKey,
            double f);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fa_fdata_e(
            [MarshalAs(UnmanagedType.LPStr)] string objKey,
            [MarshalAs(UnmanagedType.LPStr)] string f);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fa_fixed_tone(
            [MarshalAs(UnmanagedType.LPStr)] string objKey,
            [MarshalAs(UnmanagedType.LPStr)] string compKey,
            int tag, double freq, int ssb);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fa_fixed_tone_e(
            [MarshalAs(UnmanagedType.LPStr)] string objKey,
            [MarshalAs(UnmanagedType.LPStr)] string compKey,
            int tag,
            [MarshalAs(UnmanagedType.LPStr)] string freq,
            int ssb);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fa_fsample(
            [MarshalAs(UnmanagedType.LPStr)] string objKey,
            double f);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fa_fsample_e(
            [MarshalAs(UnmanagedType.LPStr)] string objKey,
            [MarshalAs(UnmanagedType.LPStr)] string f);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fa_fshift(
            [MarshalAs(UnmanagedType.LPStr)] string objKey,
            double f);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fa_fshift_e(
            [MarshalAs(UnmanagedType.LPStr)] string objKey,
            [MarshalAs(UnmanagedType.LPStr)] string f);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fa_fund_images(
            [MarshalAs(UnmanagedType.LPStr)] string objKey,
            [MarshalAs(UnmanagedType.I1)] bool enable);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fa_hd(
            [MarshalAs(UnmanagedType.LPStr)] string objKey,
            int n);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fa_ilv(
            [MarshalAs(UnmanagedType.LPStr)] string objKey,
            [In] int[] ilv, UIntPtr ilvSize,
            [MarshalAs(UnmanagedType.I1)] bool asNoise);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fa_imd(
            [MarshalAs(UnmanagedType.LPStr)] string objKey,
            int n);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fa_load(
            [Out] byte[] buf, UIntPtr size,
            [MarshalAs(UnmanagedType.LPStr)] string filename,
            [MarshalAs(UnmanagedType.LPStr)] string objKey);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fa_load_key_size(
            out UIntPtr size,
            [MarshalAs(UnmanagedType.LPStr)] string filename,
            [MarshalAs(UnmanagedType.LPStr)] string objKey);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fa_max_tone(
            [MarshalAs(UnmanagedType.LPStr)] string objKey,
            [MarshalAs(UnmanagedType.LPStr)] string compKey,
            int tag, int ssb);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fa_preview(
            [Out] byte[] buf, UIntPtr size,
            [MarshalAs(UnmanagedType.LPStr)] string cfgId,
            [MarshalAs(UnmanagedType.I1)] bool cplx);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fa_preview_size(
            out UIntPtr size,
            [MarshalAs(UnmanagedType.LPStr)] string cfgId,
            [MarshalAs(UnmanagedType.I1)] bool cplx);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fa_quad_errors(
            [MarshalAs(UnmanagedType.LPStr)] string objKey,
            [MarshalAs(UnmanagedType.I1)] bool enable);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fa_remove_comp(
            [MarshalAs(UnmanagedType.LPStr)] string objKey,
            [MarshalAs(UnmanagedType.LPStr)] string compKey);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fa_reset(
            [MarshalAs(UnmanagedType.LPStr)] string objKey);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fa_result(
            out double result,
            [In]  IntPtr[] rkeys,   UIntPtr rkeysSize,
            [In]  double[] rvalues, UIntPtr rvaluesSize,
            [MarshalAs(UnmanagedType.LPStr)] string rkey);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fa_result_string(
            [Out] byte[] result, UIntPtr resultSize,
            [In]  IntPtr[] rkeys,   UIntPtr rkeysSize,
            [In]  double[] rvalues, UIntPtr rvaluesSize,
            [MarshalAs(UnmanagedType.LPStr)] string rkey);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fa_result_string_size(
            out UIntPtr size,
            [In] IntPtr[] rkeys,   UIntPtr rkeysSize,
            [In] double[] rvalues, UIntPtr rvaluesSize,
            [MarshalAs(UnmanagedType.LPStr)] string rkey);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fa_ssb(
            [MarshalAs(UnmanagedType.LPStr)] string objKey,
            int group, int ssb);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fa_var(
            [MarshalAs(UnmanagedType.LPStr)] string objKey,
            [MarshalAs(UnmanagedType.LPStr)] string name,
            double value);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fa_wo(
            [MarshalAs(UnmanagedType.LPStr)] string objKey,
            int n);

        // ===============================================================
        // Fourier Transforms
        // ===============================================================
